--- a/develop/css/homestyle.css
+++ b/develop/css/homestyle.css
@@ -20,8 +20,8 @@ select {
     height: 30px;
     border-radius: 5px;
     font-size: 20px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
 }
 
 
@@ -31,7 +31,7 @@ button {
     border: 1px solid black;
     border-radius: 5px;
     width: 150px;
-    height: 25px;
+    height: 30px;
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
@@ -41,12 +41,11 @@ button {
 
 .card {
     display: flex;
-    
     align-items: center;
     flex-direction: column;
-    background-color: yellow;
+    background-color: rgb(251, 253, 99);
     border-radius: 15px;
-    border: solid 2px black;
+    border: ridge 4px black;
     height: 750px;
     width: 550px;
 }
@@ -64,21 +63,30 @@ button {
 
 .inputEl {
     padding-top: 0px;
-    padding-bottom: 150px;
+    padding-bottom: 90px;
 }
 
 .language {
     margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.languageOps {
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .generate {
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
 #form-input {
     border-radius: 5px;
     width: 250px;
-    height: 30px;
+    height: auto;
     font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -86,5 +94,12 @@ button {
 
 
 button:hover {
-    background-color: red;
+    background-color: rgb(226, 223, 223);
+    
 }
+
+select:hover {
+    background-color: rgb(226, 223, 223);
+    
+}
+
