--- a/develop/css/style.css
+++ b/develop/css/style.css
@@ -1,94 +1,142 @@
 :root {
-    --primary: #e0e4ff;
-    --secondary: #9caea9;
-    --tertiary: #788585;
-    --light-dark: #6f6866;
-    --dark: #435af7;
-    --border-radius: 0.3rem;
+  --primary: #e0e4ff;
+  --secondary: #9caea9;
+  --tertiary: #788585;
+  --light-dark: #6f6866;
+  --dark: #435af7;
+  --border-radius: 0.3rem;
 }
 
 header{
-    height: 150px;
-    background-image:url('../images/header.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 10px solid black;
-    text-align: center;
+  height: 150px;
+  background-image:url('../images/header.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 10px solid black;
+  text-align: center;
 
 }
 body{
-    background-image:url('../images/background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image:url('../images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .hero {
-    text-align: center;
-    padding: 2% 3%;
-    background-color: var(--dark);
-    color: var(--primary);
-    border-bottom: 10px solid black;
-  }
-  
-  .app-title {
-    font-size: 4rem;
-    background-color: var(--primary);
-    color: black;
-    padding: 0 10px;
-    display: inline-block;
-    border-radius: var(--border-radius);
-    box-shadow: 6px 5px var(--light-dark);
-  }
+  text-align: center;
+  padding: 2% 3%;
+  background-color: var(--dark);
+  color: var(--primary);
+  border-bottom: 10px solid black;
+}
 
-  .sidebar{
-    margin-top: 10px;
-    width: 300px;
-    height: 400px;
-    background-color: var(--primary);
-    border: 5px dotted black;
-  }
+.app-title {
+  font-size: 4rem;
+  background-color: var(--primary);
+  color: black;
+  padding: 0 10px;
+  display: inline-block;
+  border-radius: var(--border-radius);
+  box-shadow: 6px 5px var(--light-dark);
+}
 
-  .card {
-    /*margin: 0 0 20px 0;*/
-   
-    margin: 0 10px;
-    border: 3px solid var(--dark);
-    border-radius: var(--border-radius);
+.sidebar{
+  margin-top: 10px;
+  width: 300px;
+  height: 400px;
+  background-color: var(--primary);
+  border: 5px dotted black;
+}
 
-  }
+.card {
+  /*margin: 0 0 20px 0;*/
+ 
+  margin: 0 10px;
+  border: 3px solid var(--dark);
+  border-radius: var(--border-radius);
 
-  .card-body {
-    padding: 2.5%;
-  }
+}
 
-  .form-input{
-    display: block;
-  }
+.card-body {
+  padding: 2.5%;
+}
 
-  .form-input {
-    width: auto;
-    padding: 3%;
-    margin: 5px 0;
-    font-size: 1.2rem;
-    border: 2px solid var(--light-dark);
-    border-radius: var(--border-radius);
-  }
+.form-input{
+  display: block;
+}
 
-  .btn {
-    font-size: 1.3rem;
-    text-decoration: none;
-    padding: 6px 5px;
-    width: auto;
-    display: block;
-    margin: 5px 0;
-    border-radius: var(--border-radius);
-    color: white;
-    border: none;
-    outline: none;
-    background-color: var(--light-dark);
-  }
+.form-input {
+  width: auto;
+  padding: 3%;
+  margin: 5px 0;
+  font-size: 1.2rem;
+  border: 2px solid var(--light-dark);
+  border-radius: var(--border-radius);
+}
 
-  p{
-    font-size: 20px;
-    margin: 5px;
-  }
+.btn {
+  font-size: 1.3rem;
+  text-decoration: none;
+  padding: 6px 5px;
+  width:90%;
+  display: block;
+  margin: 10px 0;
+  border-radius: var(--border-radius);
+  color: white;
+  border: none;
+  outline: none;
+  background-color: var(--light-dark);
+}
+
+p{
+  font-size: 20px;
+  margin: 5px;
+}
+
+.container{
+  width: 98%;
+  height: auto;
+ /* margin: 40px auto;*/
+  display: grid;
+  grid-template-columns: 20% 78%;
+  gap: 2%;
+}
+
+.middleside{
+  text-align: center;
+  margin-top: 10px;
+  width: 100%;
+  height: 1000px;
+  background-color: red;
+  border: 5px dotted black;
+ /* margin: 40px auto;*/
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 2%;
+
+}
+
+.datainfo1{
+  background-color: greenyellow;
+
+}
+
+.datainfo2{
+  background-color: brown;
+
+}
+
+.datainfo3{
+  background-color: blue;
+
+}
+
+.datainfo4{
+  background-color: pink;
+
+}
+
+.line{
+
+  border: 2px solid black;
+}
