--- a/develop/css/home.css
+++ b/develop/css/home.css
@@ -80,6 +80,9 @@ button {
 
 .language {
     margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
