--- a/develop/css/style.css
+++ b/develop/css/style.css
@@ -78,7 +78,7 @@ body{
   font-size: 1.3rem;
   text-decoration: none;
   padding: 6px 5px;
-  width:90%;
+  width:auto;
   display: block;
   margin: 10px 0;
   border-radius: var(--border-radius);
@@ -110,9 +110,6 @@ p{
   background-color: red;
   border: 5px dotted black;
  /* margin: 40px auto;*/
-  display: grid;
-  grid-template-columns: 50% 50%;
-  gap: 2%;
 
 }
 
@@ -122,17 +119,14 @@ p{
 }
 
 .datainfo2{
+  height: 200px;
   background-color: brown;
 
 }
 
 .datainfo3{
+  height: 200px;
   background-color: blue;
-
-}
-
-.datainfo4{
-  background-color: pink;
 
 }
 
