travel page first draft

--- a/develop/css/home.css
+++ b/develop/css/home.css
@@ -5,7 +5,8 @@ body {
     margin-top: 100px;
     background-image: url('../images/mapbackground.jpg');
 
-
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
@@ -71,7 +72,7 @@ button {
 }
 
 
-.find {
+.search {
     padding-top: 80px;
 }
 
