--- a/develop/css/style.css
+++ b/develop/css/style.css
@@ -1,35 +1,63 @@
 :root {
-  --primary: #e0e4ff;
-  --secondary: #9caea9;
-  --tertiary: #788585;
-  --light-dark: #6f6866;
-  --dark: #435af7;
-  --border-radius: 0.3rem;
+    --primary: #e0e4ffb7;
+    --background: rgba(145, 96, 5, 0.884);
+    --tertiary: #e0e4ff34;
+    --light-dark: #6f6866;
+    --border-radius: 0.3rem;
 }
+
 
 header{
-  height: 150px;
-  /*background-image:url('../images/header.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;*/
-  border: 10px solid black;
-  text-align: center;
-
+    height: 150px;
+    border: 6px ridge black;
+    text-align: center;
+    background-color: rgba(145, 96, 5, 0.884);
+    border-radius: 15px;
 }
 body{
-  /*background-image:url('../images/background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;*/
+    background-image:url('../images/mapbackground.jpg');
+    background-repeat: no-repeat;
+    background-size: auto;
 }
 
-.hero {
-  text-align: center;
-  padding: 2% 3%;
-  background-color: var(--dark);
-  color: var(--primary);
-  border-bottom: 10px solid black;
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
+button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2px;
+    background-color: rgba(243, 233, 233, 0.829);
+    color: black;
+    border: 2px ridge black;
+    border-radius: 5px;
+    width: 150px;
+    height: 30px;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.form-input {
+    border-radius: 5px;
+    background-color: rgba(243, 233, 233, 0.829) ;
+    width: 270px;
+    height: auto;
+    border: ridge 2px black;
+    font-size: 25px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.header {
+    text-align: center;
+    color: var(--primary);
+  }
+ 
 .app-title {
   font-size: 4rem;
   background-color: var(--primary);
@@ -38,61 +66,27 @@ body{
   display: inline-block;
   border-radius: var(--border-radius);
   box-shadow: 6px 5px var(--light-dark);
-}
+  }
+
 
 .sidebar{
+  display: flex;
+  flex-wrap: wrap;
   margin-top: 10px;
   width: 300px;
-  height: 400px;
+  height: auto;
   background-color: var(--primary);
-  border: 5px dotted black;
+  border: 5px ridge black;
+  border-radius: 10px;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 6px;
+  padding-top: 6px;
 }
 
-.card {
-  /*margin: 0 0 20px 0;*/
- 
-  margin: 0 10px;
-  border: 3px solid var(--dark);
-  border-radius: var(--border-radius);
-
-}
-
-.card-body {
-  padding: 2.5%;
-}
-
-.form-input{
-  display: block;
-}
-
-.form-input {
-  width: auto;
-  padding: 3%;
-  margin: 5px 0;
-  font-size: 1.2rem;
-  border: 2px solid var(--light-dark);
-  border-radius: var(--border-radius);
-}
-
-.btn {
-  font-size: 1.3rem;
-  text-decoration: none;
-  padding: 6px 5px;
-  width:auto;
-  display: block;
-  margin: 10px 0;
-  border-radius: var(--border-radius);
-  color: white;
-  border: none;
-  outline: none;
-  background-color: var(--light-dark);
-}
-
-.btn:hover {
-  color: var(--primary);
-  background-color: var(--tertiary);
-  transform: translate(0, 0);
-  box-shadow: 2px 2px var(--dark);
+.line {
+    border: 1px dashed black;
+    width: 290px;
 }
 
 p{
@@ -101,41 +95,61 @@ p{
 }
 
 .container{
-  width: 98%;
-  height: auto;
- /* margin: 40px auto;*/
-  display: grid;
-  grid-template-columns: 20% 78%;
-  gap: 2%;
+    width: 98%;
+    height: 300px;
+    
+   /* margin: 40px auto;*/
+    display: grid;
+    grid-template-columns: 20% 78%;
+    gap: 2%;
 }
 
-.middleside{
-  text-align: center;
-  margin-top: 10px;
-  width: 100%;
-  height: 1000px;
-  background-color: red;
-  border: 5px dotted black;
- /* margin: 40px auto;*/
+.resultContent{
+    text-align: center;
+    margin-top: 10px;
+    width: 100%;
+    height: auto;
+    background-color:var(--background);
+    border: 5px dotted black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   /* margin: 40px auto;*/
+  
+  }
 
-}
-
-.datainfo1{
-  background-color: greenyellow;
-
-}
-
-.datainfo2{
-  background-color: brown;
-
-}
-
-.datainfo3{
-  background-color: blue;
+.dataInfo1{
+    background-color: var(--background);
+    height:auto;
+    padding: 10px;
 
 }
 
-.line{
+.dataInfo2{
+    background-color: var(--background);
+    height: auto;
+    padding: 10px;
 
-  border: 2px solid black;
+}
+
+.dataInfo3{
+    height: auto;
+    background-color: var(--background);
+    padding: 10px;
+}
+
+.dataInfo4{
+    height: auto;
+    background-color: var(--background);
+    padding: 10px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+}
+
+button:hover{
+    background-color: var(--tertiary);
+    color: rgb(187, 20, 20);
 }
